GNOME Bugzilla – Bug 767498
splitmuxsink: Not handling FLUSH events correctly
Last modified: 2017-04-20 10:20:43 UTC
.
Created attachment 329571 [details] [review] splitmuxsink: Correctly catch FLUSH events in probes
I think we should fix bug #767500 first, because it's calling the probe way too much.
Created attachment 350111 [details] [review] splitmuxsink: Correctly catch FLUSH events in probes
Comment on attachment 350111 [details] [review] splitmuxsink: Correctly catch FLUSH events in probes pushed as 6b4256