splitmuxsink: Correctly catch FLUSH events in probes

https://bugzilla.gnome.org/show_bug.cgi?id=767498